--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 
 {% block app_content %}
   <div class="align-left">
-  {% for field in fields %}
-    {% include '_field.html' %}
-  {% endfor %}
+    {% for field in fields %}
+      {% include "_field.html" %}
+    {% endfor %}
   </div>
-{% endblock %}
+{% endblock app_content %}
