--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
 }
 
@@ -49,8 +50,8 @@ main {
 }
 
 .sidebar-item.active {
-  background-color: var(--bs-secondary)!important;
-  border-color: var(--bs-gray-500)!important;
+  background-color: var(--bs-secondary) !important;
+  border-color: var(--bs-gray-500) !important;
 }
 
 .sidebar-item:hover {
