--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,17 +1,17 @@
-{% extends 'base.html' %}
-{% from 'bootstrap5/form.html' import render_form %}
+{% extends "base.html" %}
+{% from "bootstrap5/form.html" import render_form %}
 
 {% block app_content %}
-  <h1>{{ 'Sign In' }}</h1>
+  <h1>{{ "Sign In" }}</h1>
   <div class="row">
-    <div class="col-md-4">
-      {{ render_form(form) }}
-    </div>
+    <div class="col-md-4">{{ render_form(form) }}</div>
   </div>
   <br>
-  <p>{{ 'New User?' }} <a href="{{ url_for('auth.register') }}">{{ 'Click to Register!' }}</a></p>
   <p>
-    {{ 'Forgot Your Password?' }}
-    <a href="{{ url_for('auth.reset_password_request') }}">{{ 'Click to Reset It' }}</a>
+    {{ "New User?" }} <a href="{{ url_for('auth.register') }}">{{ "Click to Register!" }}</a>
   </p>
-{% endblock %}
+  <p>
+    {{ "Forgot Your Password?" }}
+    <a href="{{ url_for('auth.reset_password_request') }}">{{ "Click to Reset It" }}</a>
+  </p>
+{% endblock app_content %}
