--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
 
-{% block sidebar %} {% endblock %}
+{% block sidebar %}
+{% endblock sidebar %}
 
 {% block app_content %}
   <table class="table table-hover">
     <tr>
       <td>
-        <h1>{{ 'User' }}: {{ user.username }}</h1>
+        <h1>{{ "User" }}: {{ user.username }}</h1>
         {% if user == current_user %}
-        {% if user.email %}<p>{{ user.email }}</p>{% endif %}
-        <p><a href="{{ url_for('main.edit_profile') }}">{{ 'Edit your profile' }}</a></p>
+          {% if user.email %}<p>{{ user.email }}</p>{% endif %}
+          <p>
+            <a href="{{ url_for('main.edit_profile') }}">{{ "Edit your profile" }}</a>
+          </p>
         {% endif %}
       </td>
     </tr>
   </table>
-{% endblock %}
+{% endblock app_content %}
