--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 {% endblock title %}
 
 {% block navbar %}
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark p-2">
+  <nav class="navbar nav-masthead sticky-top navbar-expand-lg navbar-dark p-2">
     <div class="d-flex flex-row">
       <button class="navbar-toggler"
               type="button"
@@ -38,7 +38,8 @@
     <div class="navbar-collapse collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="{{ url_for('main.home') }}" class="nav-link">Home</a>
+          <a class="nav-link {% if active_page == 'home' -%} active{% endif %}"
+             href="{{ url_for('main.home') }}">Home</a>
         </li>
         <li class="nav-item">
           <a href="{{ url_for('main.preset') }}" class="nav-link">Preset</a>
@@ -51,7 +52,7 @@
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link"
+            <a class="nav-link {% if active_page == 'profile' -%} active{% endif %}"
                href="{{ url_for('main.user', username=current_user.username) }}">{{ 'Profile' }}</a>
           </li>
           <li class="nav-item">
@@ -70,16 +71,47 @@
 {% endblock sidebar %}
 
 {% block content %}
-  <div class="container-fluid content px-4 py-2">
-    {% with message = utils.render_messages() %}
-      {% if message %}<div class="alert alert-info" role="alert">{{ message }}</div>{% endif %}
-    {% endwith %}
+  <main class="bg-white">
+    <div class="container-lg px-4 py-2" id="content">
+      {% with message = utils.render_messages() %}
+        {% if message %}<div class="alert alert-info" role="alert">{{ message }}</div>{% endif %}
+      {% endwith %}
 
-    {# application content needs to be provided in the app_content block #}
-    {% block app_content %}
-    {% endblock app_content %}
-  </div>
+      {# application content needs to be provided in the app_content block #}
+      {% block app_content %}
+      {% endblock app_content %}
+    </div>
+  </main>
 {% endblock content %}
+
+{% block footer %}
+  {% if field_footer %}
+    {% include "field_footer.html" %}
+  {% else %}
+    <div class="container-fluid bg-white p-0" id="footer">
+      <footer class="my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">Features</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">FAQs</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">About</a>
+          </li>
+        </ul>
+        <p class="text-center text-muted">© 2021 Company, Inc</p>
+      </footer>
+    </div>
+  {% endif %}
+{% endblock footer %}
 
 {% block scripts %}
   {{ super() }}
