--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,6 @@
 {% extends "layout.html" %}
 {% import 'bootstrap5/utils.html' as utils %}
 
-{% block styles %}
-  <link rel="custom stylesheet"
-        href="{{ url_for('static', filename='css/style.css') }}">
-{% endblock styles %}
-
 {% block title %}
   {% if title %}
     {{ title }} | AgroPlan
@@ -15,53 +10,7 @@
 {% endblock title %}
 
 {% block navbar %}
-  <nav class="navbar nav-masthead sticky-top navbar-expand-lg navbar-dark p-2">
-    <div class="d-flex flex-row">
-      <button class="navbar-toggler"
-              type="button"
-              id="sidebarToggle"
-              aria-expanded="false"
-              aria-label="Toggle sidebar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand ps-2" href="{{ url_for('main.home') }}">AgroPlan</a>
-    </div>
-    <button class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link {% if active_page == 'home' -%} active{% endif %}"
-             href="{{ url_for('main.home') }}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="{{ url_for('main.preset') }}" class="nav-link">Preset</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto">
-        {% if current_user.is_anonymous %}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.login') }}">{{ 'Login' }}</a>
-          </li>
-        {% else %}
-          <li class="nav-item">
-            <a class="nav-link {% if active_page == 'profile' -%} active{% endif %}"
-               href="{{ url_for('main.user', username=current_user.username) }}">{{ 'Profile' }}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ 'Logout' }}</a>
-          </li>
-        {% endif %}
-      </ul>
-    </div>
-  </nav>
+  {% include "navbar.html" %}
 {% endblock navbar %}
 
 {% block sidebar %}
@@ -72,7 +21,7 @@
 
 {% block content %}
   <main class="bg-white">
-    <div class="container-lg px-4 py-2" id="content">
+    <div class="container-fluid" id="content">
       {% with message = utils.render_messages() %}
         {% if message %}<div class="alert alert-info" role="alert">{{ message }}</div>{% endif %}
       {% endwith %}
@@ -88,28 +37,7 @@
   {% if field_footer %}
     {% include "field_footer.html" %}
   {% else %}
-    <div class="container-fluid bg-white p-0" id="footer">
-      <footer class="my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">Features</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">FAQs</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">About</a>
-          </li>
-        </ul>
-        <p class="text-center text-muted">© 2021 Company, Inc</p>
-      </footer>
-    </div>
+    {% include "footer.html" %}
   {% endif %}
 {% endblock footer %}
 
