--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,6 +14,7 @@
             type="image/x-icon">
       <!-- Bootstrap CSS -->
       {{ bootstrap.load_css() }}
+      <script src="https://kit.fontawesome.com/10e37a19bc.js" crossorigin="anonymous"></script>
       <link rel="custom stylesheet"
             href="{{ url_for('static', filename='css/style.css') }}">
       {% block styles %}
