--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,3 +1,5 @@
+{% from "bootstrap5/nav.html" import render_nav_item %}
+
 <nav class="navbar nav-masthead sticky-top navbar-expand-lg navbar-dark p-2">
   <div class="d-flex flex-row">
     <button class="navbar-toggler"
@@ -20,27 +22,15 @@
   </button>
   <div class="navbar-collapse collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link {% if active_page == 'home' -%} active{% endif %}"
-           href="{{ url_for('main.home') }}">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="{{ url_for('main.preset') }}" class="nav-link">Preset</a>
-      </li>
+      {{ render_nav_item("main.index", "Home", _use_li=True)}}
+      {{ render_nav_item("main.preset", "Preset", _use_li=True) }}
     </ul>
     <ul class="navbar-nav ms-auto">
       {% if current_user.is_anonymous %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth.login') }}">{{ 'Login' }}</a>
-        </li>
+        {{ render_nav_item("auth.login", "Login", _use_li=True) }}
       {% else %}
-        <li class="nav-item">
-          <a class="nav-link {% if active_page == 'profile' -%} active{% endif %}"
-             href="{{ url_for('main.user', username=current_user.username) }}">{{ 'Profile' }}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ 'Logout' }}</a>
-        </li>
+        {{ render_nav_item("main.user", "Profile", _use_li=True, username=current_user.username) }}
+        {{ render_nav_item("auth.logout", "Logout", _use_li=True) }}
       {% endif %}
     </ul>
   </div>
