--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -5,7 +5,7 @@
 
       {% for field in fields %}
         <a href="{{ url_for('main.base_field', base_field_id=field.id) }}"
-           class="list-group-item list-group-item-action bg-dark text-white sidebar-item"
+           class="list-group-item list-group-item-action {% if field.fields[0].field_type.name == 'grassland' %} bg-grassland {% elif field.fields[0].field_type.name == 'cropland' %} bg-cropland {% else %} bg-custom {% endif %} text-white sidebar-item"
            id="{{ field.id }}">
           <div class="d-flex w-100 justify-content-between">
             <span class="mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
